fix(config) : fix hibernate to validate rather than update directly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=sales-app
 spring.datasource.url=jdbc:postgresql://db:5432/sales_app
 spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 jwt.secret=GF:[t~r;%53TNz`&$Pgsnq
 jwt.expiration=86400000
 server.port=8080
