feat(log, try & catch) : adding split log & try catch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=sales-app
-spring.datasource.url=jdbc:postgresql://db:5432/sales_app
+spring.datasource.url=jdbc:postgresql://localhost:5432/sales_app
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=validate
