--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-logging</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.15.0</version>  <!-- Use the latest stable version -->
+		</dependency>
 	</dependencies>
 
 	<build>
