--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ server.port=8080
 
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dani.nugrahadi@gmail.com
+spring.mail.password=szumeeuxxwqifstq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+activation.url=http://localhost:8080/api/auth/activate?token=
